--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     </header>
 
     <main class="main">
-      <!-- TODO: Why we exists start-->
+      <!-- TODO: Hero starts-->
       <section>
-        <div>
-          <article>
-            <h1>por que existimos?</h1>
-            <p>
+        <div class="flex column hero-container">
+          <article class="flex column hero__content">
+            <h1 class="regular__h">por que existimos?</h1>
+            <p class="regular__p">
               Nossa essência é inspirada na Cidade de Goiás, terra de Cora
               Coralina, famosa por seus doces e repletos de frutas. A Frutos de
               Goiás existe para trazer para seus consumidores os sabores que
@@ -59,21 +59,29 @@
             <button class="button">get started</button>
           </article>
 
-          <div>
-            <picture>
-              <img src="assets/product1.webp" alt="" />
+          <div class="hero__products__container">
+            <picture class="hero__product__container">
+              <img src="assets/product1.webp" alt="" class="hero__product" />
             </picture>
 
-            <picture>
-              <img src="assets/product2.webp" alt="" />
+            <picture class="hero__product__container">
+              <img
+                src="assets/product2.webp"
+                alt=""
+                class="hero__product product__up"
+              />
             </picture>
 
-            <picture>
-              <img src="assets/product3.webp" alt="" />
+            <picture class="hero__product__container">
+              <img src="assets/product3.webp" alt="" class="hero__product" />
             </picture>
 
-            <picture>
-              <img src="assets/product4.webp" alt="" />
+            <picture class="hero__product__container">
+              <img
+                src="assets/product4.webp"
+                alt=""
+                class="hero__product product__up"
+              />
             </picture>
           </div>
         </div>
