Natural section complete

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main class="main">
       <!-- TODO: Hero starts-->
-      <section>
+      <section class="section">
         <div class="flex column hero-container">
           <article class="flex column hero__content">
             <h1 class="regular__h">por que existimos?</h1>
@@ -84,6 +84,65 @@
               />
             </picture>
           </div>
+        </div>
+      </section>
+
+      <!-- FIXME: Natural starts -->
+      <section class="section natural-section">
+        <div class="flex natural-container">
+          <picture>
+            <img
+              src="assets/product1.webp"
+              alt=""
+              class="regular__image natural__image"
+            />
+          </picture>
+
+          <article class="flex column natural__content">
+            <h2 class="regular__h">E é natural mesmo?</h2>
+
+            <p class="regular__p">
+              São frutas de todo o Brasil. Tudo é feito da forma mais caseira e
+              artesanal possível. As receitas são únicas com cerca de 90 % de
+              fruta. É fruta mesmo, mais cremosa e refrescante do que você
+              imagina. Agora adicione Leite fresco, direto da fazenda, natural e
+              integral.
+            </p>
+
+            <ul class="flex column natural__list">
+              <li class="natural__list__item">
+                <i class="fa-solid fa-circle-check"></i>
+                <mark> Feito de forma caseira e artesanal</mark>
+              </li>
+
+              <li class="natural__list__item">
+                <i class="fa-solid fa-circle-check"></i>
+                <mark> Receitas únicas</mark>
+              </li>
+
+              <li class="natural__list__item">
+                <i class="fa-solid fa-circle-check"></i>
+                <mark> Cerca de 90% de fruta</mark>
+              </li>
+
+              <li class="natural__list__item">
+                <i class="fa-solid fa-circle-check"></i>
+                <mark> Frutas frescas e selecionadas</mark>
+              </li>
+
+              <li class="natural__list__item">
+                <i class="fa-solid fa-circle-check"></i>
+                <mark> Ingredientes naturais de primeira linha</mark>
+              </li>
+
+              <li class="natural__list__item">
+                <i class="fa-solid fa-circle-check"></i>
+                <mark> Frutas colhidas diretamente do pé</mark>
+              </li>
+            </ul>
+
+            <button type="button" class="button">get started</button>
+          </article>
         </div>
       </section>
     </main>
