Garanteed section complete

--- a/index.html
+++ b/index.html
@@ -145,6 +145,88 @@
           </article>
         </div>
       </section>
+
+      <!-- TODO: Garantee starts -->
+      <section class="section">
+        <div class="garantee-container">
+          <article class="garantee__content flex column">
+            <h2 class="regular__h">E como garantimos isso?</h2>
+            <p class="regular__p">
+              Utilizando apenas frutas frescas, selecionadas, e ingredientes
+              naturais de primeira linha. Colhemos as diversas frutas no pé,
+              para levar até você os sabores únicos da natureza, de um jeito
+              ainda mais saboroso e refrescante.
+            </p>
+            <button type="button" class="button">get stared</button>
+          </article>
+
+          <div class="garantee__img__container garantee__img__first relative">
+            <picture>
+              <img
+                src="assets/loja1.webp"
+                alt=""
+                class="regular__image garantee__image"
+              />
+            </picture>
+            <article class="absolute garantee__img__content">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </article>
+          </div>
+
+          <div class="garantee__img__container garantee__img__second relative">
+            <picture>
+              <img
+                src="assets/loja2.webp"
+                alt=""
+                class="regular__image garantee__image"
+              />
+            </picture>
+            <article class="absolute garantee__img__content">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Voluptas et qui maiores aperiam architecto
+              </p>
+            </article>
+          </div>
+
+          <div class="garantee__img__container garantee__img__third relative">
+            <picture>
+              <img
+                src="assets/loja3.webp"
+                alt=""
+                class="regular__image garantee__image"
+              />
+            </picture>
+            <article class="absolute garantee__img__content">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Voluptas et qui
+              </p>
+            </article>
+          </div>
+
+          <div class="garantee__img__container garantee__img__fourth relative">
+            <picture>
+              <img
+                src="assets/loja4.webp"
+                alt=""
+                class="regular__image garantee__image large"
+              />
+            </picture>
+            <article class="absolute garantee__img__content">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Voluptas et qui maiores aperiam architecto soluta similique
+                neque aspernatur reiciendis natus.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="js/index.js"></script>
