--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </picture>
             <article class="absolute garantee__img__content">
               <h3>Lorem ipsum dolor sit.</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur</p>
             </article>
           </div>
 
@@ -184,10 +184,7 @@
             </picture>
             <article class="absolute garantee__img__content">
               <h3>Lorem ipsum dolor sit.</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Voluptas et qui maiores aperiam architecto
-              </p>
+              <p>Lorem ipsum dolor, sit amet consectetur.</p>
             </article>
           </div>
 
@@ -201,10 +198,7 @@
             </picture>
             <article class="absolute garantee__img__content">
               <h3>Lorem ipsum dolor sit.</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Voluptas et qui
-              </p>
+              <p>Lorem ipsum dolor, sit amet.</p>
             </article>
           </div>
 
@@ -220,8 +214,7 @@
               <h3>Lorem ipsum dolor sit.</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Voluptas et qui maiores aperiam architecto soluta similique
-                neque aspernatur reiciendis natus.
+                Voluptas et qui maiores aperiam architecto soluta
               </p>
             </article>
           </div>
