Video section complete

--- a/index.html
+++ b/index.html
@@ -220,6 +220,35 @@
           </div>
         </div>
       </section>
+
+      <!-- TODO: Video section starts -->
+      <section class="section">
+        <div class="video-section-container flex">
+          <article class="flex column video__content">
+            <h2 class="regular__h">fruta do pé, direto pro seu picolé!</h2>
+            <p class="regular__p">
+              A essência da Frutos de Goiás sempre foram as frutas. Os produtos
+              continuam sendo fabricados em um processo natural e assim,
+              seguimos crescendo artesanalmente
+            </p>
+            <button type="button" class="button">get started</button>
+          </article>
+          <div class="video__container">
+            <picture>
+              <img
+                src="assets/capa.webp"
+                alt=""
+                class="regular__image video__capa"
+              />
+            </picture>
+            <i class="fa-solid fa-play video__play"></i>
+          </div>
+          <div class="video__container__itself">
+            <video src="assets/videos/video.mp4" controls class="video"></video>
+            <i class="fas fa-times absolute close__video"></i>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="js/index.js"></script>
