--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- TODO: Hero starts-->
       <section class="section">
         <div class="flex column hero-container">
-          <article class="flex column hero__content">
+          <!-- <article class="flex column hero__content">
             <h1 class="regular__h">por que existimos?</h1>
             <p class="regular__p">
               Nossa essência é inspirada na Cidade de Goiás, terra de Cora
@@ -57,7 +57,37 @@
               relembrem a infância.
             </p>
             <button class="button">get started</button>
-          </article>
+          </article> -->
+          <div class="video-section-container flex">
+            <article class="flex column video__content">
+              <h1 class="regular__h">por que existimos?</h1>
+              <p class="regular__p">
+                Nossa essência é inspirada na Cidade de Goiás, terra de Cora
+                Coralina, famosa por seus doces e repletos de frutas. A Frutos
+                de Goiás existe para trazer para seus consumidores os sabores
+                que relembrem a infância.
+              </p>
+              <button type="button" class="button">get started</button>
+            </article>
+            <div class="video__container">
+              <picture>
+                <img
+                  src="assets/capa.webp"
+                  alt=""
+                  class="regular__image video__capa"
+                />
+              </picture>
+              <i class="fa-solid fa-play video__play"></i>
+            </div>
+            <div class="video__container__itself">
+              <video
+                src="assets/videos/video.mp4"
+                controls
+                class="video"
+              ></video>
+              <i class="fas fa-times absolute close__video"></i>
+            </div>
+          </div>
 
           <div class="hero__products__container">
             <picture class="hero__product__container">
@@ -157,7 +187,15 @@
               para levar até você os sabores únicos da natureza, de um jeito
               ainda mais saboroso e refrescante.
             </p>
-            <button type="button" class="button">get stared</button>
+            <!-- <button type="button" class="button">get stared</button> -->
+
+            <h2 class="regular__h">fruta do pé, direto pro seu picolé!</h2>
+            <p class="regular__p">
+              A essência da Frutos de Goiás sempre foram as frutas. Os produtos
+              continuam sendo fabricados em um processo natural e assim,
+              seguimos crescendo artesanalmente
+            </p>
+            <button type="button" class="button">get started</button>
           </article>
 
           <div class="garantee__img__container garantee__img__first relative">
@@ -222,7 +260,7 @@
       </section>
 
       <!-- TODO: Video section starts -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="video-section-container flex">
           <article class="flex column video__content">
             <h2 class="regular__h">fruta do pé, direto pro seu picolé!</h2>
@@ -248,7 +286,7 @@
             <i class="fas fa-times absolute close__video"></i>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <script src="js/index.js"></script>
