--- a/index.html
+++ b/index.html
@@ -287,6 +287,138 @@
           </div>
         </div>
       </section> -->
+
+      <!-- FIXME: Products start -->
+      <section class="section">
+        <div class="products-section-container">
+          <section>
+            <div class="flex column product__section__intro__container">
+              <h2 class="regular__h">nossos produtos</h2>
+              <p class="regular__p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+                aliquam.
+              </p>
+              <div class="flex products__intro__container">
+                <picture class="product__intro__img__container">
+                  <img
+                    src="assets/capa.webp"
+                    alt=""
+                    class="regular__image products__intro__img"
+                  />
+                </picture>
+
+                <picture class="product__intro__img__container">
+                  <img
+                    src="assets/amount.webp"
+                    alt=""
+                    class="regular__image products__intro__img"
+                  />
+                </picture>
+
+                <picture class="product__intro__img__container">
+                  <img
+                    src="assets/capa.webp"
+                    alt=""
+                    class="regular__image products__intro__img"
+                  />
+                </picture>
+              </div>
+            </div>
+          </section>
+
+          <section>
+            <div class="menu flex column">
+              <h2 class="regular__h">nosso menu</h2>
+
+              <div class="menu__content flex">
+                <div class="menu__product__container">
+                  <picture>
+                    <img src="assets/product1.webp" alt="" />
+                  </picture>
+                  <div class="product__info flex">
+                    <h3>nome do produto</h3>
+                    <mark class="price">r$ <strong>19,99</strong></mark>
+                    <div class="product__buttons__container flex">
+                      <a href="#" class="button"> Peça pelo Ifood </a>
+                      <a href="#" class="button"> Peça pelo nosso delivery </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="menu__product__container">
+                  <picture>
+                    <img src="assets/product1.webp" alt="" />
+                  </picture>
+                  <div class="product__info flex">
+                    <h3>nome do produto</h3>
+                    <mark class="price">r$ <strong>19,99</strong></mark>
+                    <div class="product__buttons__container flex">
+                      <a href="#" class="button"> Peça pelo Ifood </a>
+                      <a href="#" class="button"> Peça pelo nosso delivery </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="menu__product__container">
+                  <picture>
+                    <img src="assets/product1.webp" alt="" />
+                  </picture>
+                  <div class="product__info flex">
+                    <h3>nome do produto</h3>
+                    <mark class="price">r$ <strong>19,99</strong></mark>
+                    <div class="product__buttons__container flex">
+                      <a href="#" class="button"> Peça pelo Ifood </a>
+                      <a href="#" class="button"> Peça pelo nosso delivery </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="menu__product__container">
+                  <picture>
+                    <img src="assets/product1.webp" alt="" />
+                  </picture>
+                  <div class="product__info flex">
+                    <h3>nome do produto</h3>
+                    <mark class="price">r$ <strong>19,99</strong></mark>
+                    <div class="product__buttons__container flex">
+                      <a href="#" class="button"> Peça pelo Ifood </a>
+                      <a href="#" class="button"> Peça pelo nosso delivery </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="menu__product__container">
+                  <picture>
+                    <img src="assets/product1.webp" alt="" />
+                  </picture>
+                  <div class="product__info flex">
+                    <h3>nome do produto</h3>
+                    <mark class="price">r$ <strong>19,99</strong></mark>
+                    <div class="product__buttons__container flex">
+                      <a href="#" class="button"> Peça pelo Ifood </a>
+                      <a href="#" class="button"> Peça pelo nosso delivery </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="menu__product__container">
+                  <picture>
+                    <img src="assets/product1.webp" alt="" />
+                  </picture>
+                  <div class="product__info flex">
+                    <h3>nome do produto</h3>
+                    <mark class="price">r$ <strong>19,99</strong></mark>
+                    <div class="product__buttons__container flex">
+                      <a href="#" class="button"> Peça pelo Ifood </a>
+                      <a href="#" class="button"> Peça pelo nosso delivery </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </section>
     </main>
 
     <script src="js/index.js"></script>
