--- a/index.html
+++ b/index.html
@@ -337,6 +337,13 @@
                   </picture>
                   <div class="product__info flex">
                     <h3>nome do produto</h3>
+                    <div class="flex items__center small__gap">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                     <mark class="price">r$ <strong>19,99</strong></mark>
                     <div class="product__buttons__container flex">
                       <a href="#" class="button"> Peça pelo Ifood </a>
@@ -351,6 +358,13 @@
                   </picture>
                   <div class="product__info flex">
                     <h3>nome do produto</h3>
+                    <div class="flex items__center small__gap">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                     <mark class="price">r$ <strong>19,99</strong></mark>
                     <div class="product__buttons__container flex">
                       <a href="#" class="button"> Peça pelo Ifood </a>
@@ -365,6 +379,13 @@
                   </picture>
                   <div class="product__info flex">
                     <h3>nome do produto</h3>
+                    <div class="flex items__center small__gap">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                     <mark class="price">r$ <strong>19,99</strong></mark>
                     <div class="product__buttons__container flex">
                       <a href="#" class="button"> Peça pelo Ifood </a>
@@ -379,6 +400,13 @@
                   </picture>
                   <div class="product__info flex">
                     <h3>nome do produto</h3>
+                    <div class="flex items__center small__gap">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                     <mark class="price">r$ <strong>19,99</strong></mark>
                     <div class="product__buttons__container flex">
                       <a href="#" class="button"> Peça pelo Ifood </a>
@@ -393,6 +421,13 @@
                   </picture>
                   <div class="product__info flex">
                     <h3>nome do produto</h3>
+                    <div class="flex items__center small__gap">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                     <mark class="price">r$ <strong>19,99</strong></mark>
                     <div class="product__buttons__container flex">
                       <a href="#" class="button"> Peça pelo Ifood </a>
@@ -407,6 +442,13 @@
                   </picture>
                   <div class="product__info flex">
                     <h3>nome do produto</h3>
+                    <div class="flex items__center small__gap">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
                     <mark class="price">r$ <strong>19,99</strong></mark>
                     <div class="product__buttons__container flex">
                       <a href="#" class="button"> Peça pelo Ifood </a>
