--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main class="main">
       <!-- TODO: Hero starts-->
-      <section class="section">
+      <section class="section hero-section relative">
         <div class="flex column hero-container">
           <!-- <article class="flex column hero__content">
             <h1 class="regular__h">por que existimos?</h1>
@@ -72,7 +72,7 @@
             <div class="video__container">
               <picture>
                 <img
-                  src="assets/capa.webp"
+                  src="assets/logo.webp"
                   alt=""
                   class="regular__image video__capa"
                 />
@@ -177,84 +177,35 @@
       </section>
 
       <!-- TODO: Garantee starts -->
-      <section class="section">
+      <section class="section garantee-section">
         <div class="garantee-container">
-          <article class="garantee__content flex column">
-            <h2 class="regular__h">E como garantimos isso?</h2>
-            <p class="regular__p">
+          <article class="flex column two__gap items__center">
+            <h2 class="regular__h text__center">e como garantimos isso?</h2>
+            <p class="regular__p text__center white">
               Utilizando apenas frutas frescas, selecionadas, e ingredientes
               naturais de primeira linha. Colhemos as diversas frutas no pé,
               para levar até você os sabores únicos da natureza, de um jeito
               ainda mais saboroso e refrescante.
             </p>
-            <!-- <button type="button" class="button">get stared</button> -->
 
-            <h2 class="regular__h">fruta do pé, direto pro seu picolé!</h2>
-            <p class="regular__p">
+            <h3 class="regular__h text__center margin__top__three">
+              fruta do pé, direto pro seu picolé!
+            </h3>
+            <p class="regular__p text__center white">
               A essência da Frutos de Goiás sempre foram as frutas. Os produtos
               continuam sendo fabricados em um processo natural e assim,
-              seguimos crescendo artesanalmente
+              seguimos crescendo artesanalmente.
             </p>
-            <button type="button" class="button">get started</button>
           </article>
 
-          <div class="garantee__img__container garantee__img__first relative">
-            <picture>
-              <img
-                src="assets/loja1.webp"
-                alt=""
-                class="regular__image garantee__image"
-              />
-            </picture>
-            <article class="absolute garantee__img__content">
-              <h3>Lorem ipsum dolor sit.</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur</p>
-            </article>
-          </div>
+          <div class="flex garantee__images__container">
+            <img src="assets/loja1.webp" alt="" class="loja2" />
 
-          <div class="garantee__img__container garantee__img__second relative">
-            <picture>
-              <img
-                src="assets/loja2.webp"
-                alt=""
-                class="regular__image garantee__image"
-              />
-            </picture>
-            <article class="absolute garantee__img__content">
-              <h3>Lorem ipsum dolor sit.</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur.</p>
-            </article>
-          </div>
+            <img src="assets/loja2.webp" alt="" class="loja1" />
 
-          <div class="garantee__img__container garantee__img__third relative">
-            <picture>
-              <img
-                src="assets/loja3.webp"
-                alt=""
-                class="regular__image garantee__image"
-              />
-            </picture>
-            <article class="absolute garantee__img__content">
-              <h3>Lorem ipsum dolor sit.</h3>
-              <p>Lorem ipsum dolor, sit amet.</p>
-            </article>
-          </div>
+            <img src="assets/loja3.webp" alt="" class="loja3" />
 
-          <div class="garantee__img__container garantee__img__fourth relative">
-            <picture>
-              <img
-                src="assets/loja4.webp"
-                alt=""
-                class="regular__image garantee__image large"
-              />
-            </picture>
-            <article class="absolute garantee__img__content">
-              <h3>Lorem ipsum dolor sit.</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Voluptas et qui maiores aperiam architecto soluta
-              </p>
-            </article>
+            <img src="assets/loja4.webp" alt="" class="kids" />
           </div>
         </div>
       </section>
