--- a/index.html
+++ b/index.html
@@ -414,6 +414,42 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__content">
+        <picture>
+          <img src="assets/logo.webp" alt="" class="footer__logo" />
+        </picture>
+
+        <article class="flex column footer__content">
+          <div class="flex items__center small__gap">
+            <h2>Nosso endereço:</h2>
+            <strong
+              >Avenida Barão do Rio Branco, 748, centro - Palhoça - SC.</strong
+            >
+          </div>
+          <div class="flex items__center small__gap">
+            <h3>Ligue para nós:</h3>
+            <strong>(48) 2132-2525</strong>
+          </div>
+          <div class="flex items__center small__gap">
+            <h4>Siga-nos:</h4>
+            <div class="no__overflow flex small__gap">
+              <a href="#">
+                <i class="fa-brands fa-instagram footer__social instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-facebook footer__social face"></i>
+              </a>
+            </div>
+          </div>
+        </article>
+
+        <div class="copy__container">
+          <p>&copy;copyright. Todos os direitos reservados.</p>
+        </div>
+      </div>
+    </footer>
+
     <script src="js/index.js"></script>
   </body>
 </html>
